# src/services/api/file.service.ts
@@ -2,27 +2,27 @@ import { join } from "path";
 import { config } from "@/configs";
 
 export class FileService {
-
-    async upload(req: any): Promise<string[]> {
-        let files = req.files
-        const pathnames = []
-        let listFiles = []
+    async upload(req: any, pathApi: string = "api/file"): Promise<string[]> {
+        let files = req.files;
+        const pathnames = [];
+        let listFiles = [];
         if (files?.length) {
-            listFiles = [...files]
+            listFiles = [...files];
         } else {
-            listFiles.push(files)
+            listFiles.push(files);
         }
         for (const file of listFiles) {
             const { filename } = file;
-            let newFilename = filename
-            const hostname = config.server.host ?? req.headers.host
-            const result = `${req.protocol}://${join(hostname, join('api/file', encodeURIComponent(newFilename))).replace(/\\/g, '/')}`
+            let newFilename = filename;
+            const hostname = config.server.host ?? req.headers.host;
+            const result = `${req.protocol}://${join(
+                hostname,
+                join(pathApi, encodeURIComponent(newFilename))
+            ).replace(/\\/g, "/")}`;
 
-            pathnames.push(result)
+            pathnames.push(result);
         }
 
-        return pathnames
-
+        return pathnames;
     }
-
 }
